/* eslint-disable @typescript-eslint/no-unused-vars */
/**
 * 该文件由脚本自动生成，如需修改请联系 PMC
 * This file generated by scripts of tdesign-api. `npm run api:docs Guide React(PC) vitest,finalProject`
 * If you need to modify this file, contact PMC first please.
 */
import React from 'react';
import { fireEvent, vi, render, mockDelay } from '@test/utils';
import { Guide } from '..';
import {
  getGuideDefaultMount,
  getGuideMultipleStepsMount,
  getCustomGuideStepMount,
  getCustomMultipleGuideStepMount,
} from './mount';

describe('Guide Component', () => {
  it('props.counter works fine', async () => {
    getGuideDefaultMount(Guide, { counter: <span className="custom-node">TNode</span> });
    await mockDelay(100);
    const tGuideCounterDom = document.querySelector('.t-guide__counter');
    expect(tGuideCounterDom).toBeTruthy();
    const customNodeDom = document.querySelector('.custom-node');
    expect(customNodeDom).toBeTruthy();
  });

  it('props.counter is a function with params', async () => {
    const fn = vi.fn();
    getGuideDefaultMount(Guide, { counter: fn });
    await mockDelay(100);
    expect(fn).toHaveBeenCalled(1);
    expect(fn.mock.calls[0][0].total).toBe(1);
    expect(fn.mock.calls[0][0].current).toBe(0);
  });

  it('props.current is equal 0', async () => {
    getGuideMultipleStepsMount(Guide, { current: 0 });
    await mockDelay(100);
    const tGuideCounterDom = document.querySelector('.t-guide__counter');
    expect(tGuideCounterDom.textContent).toBe('1/3');
    const tGuideTitleDom = document.querySelectorAll('.t-guide__title');
    expect(tGuideTitleDom.length).toBe(1);
    const tGuideDescDom = document.querySelectorAll('.t-guide__desc');
    expect(tGuideDescDom.length).toBe(1);
    const tGuideActionTGuideSkipDom = document.querySelectorAll('.t-guide__action .t-guide__skip');
    expect(tGuideActionTGuideSkipDom.length).toBe(1);
    const tGuideActionTGuidePrevDom = document.querySelector('.t-guide__action .t-guide__prev');
    expect(tGuideActionTGuidePrevDom).toBeFalsy();
    const tGuideActionTGuideNextDom = document.querySelectorAll('.t-guide__action .t-guide__next');
    expect(tGuideActionTGuideNextDom.length).toBe(1);
    const tGuideActionTGuideFinishDom = document.querySelector('.t-guide__action .t-guide__finish');
    expect(tGuideActionTGuideFinishDom).toBeFalsy();
  });

  it('props.current is equal 1', async () => {
    getGuideMultipleStepsMount(Guide, { current: 1 });
    await mockDelay(100);
    const tGuideCounterDom = document.querySelector('.t-guide__counter');
    expect(tGuideCounterDom.textContent).toBe('2/3');
    const tGuideTitleDom = document.querySelectorAll('.t-guide__title');
    expect(tGuideTitleDom.length).toBe(1);
    const tGuideDescDom = document.querySelectorAll('.t-guide__desc');
    expect(tGuideDescDom.length).toBe(1);
    const tGuideActionTGuideSkipDom = document.querySelectorAll('.t-guide__action .t-guide__skip');
    expect(tGuideActionTGuideSkipDom.length).toBe(1);
    const tGuideActionTGuidePrevDom = document.querySelectorAll('.t-guide__action .t-guide__prev');
    expect(tGuideActionTGuidePrevDom.length).toBe(1);
    const tGuideActionTGuideNextDom = document.querySelectorAll('.t-guide__action .t-guide__next');
    expect(tGuideActionTGuideNextDom.length).toBe(1);
    const tGuideActionTGuideFinishDom = document.querySelector('.t-guide__action .t-guide__finish');
    expect(tGuideActionTGuideFinishDom).toBeFalsy();
  });

  it('props.current is equal 2', async () => {
    getGuideMultipleStepsMount(Guide, { current: 2 });
    await mockDelay(100);
    const tGuideCounterDom = document.querySelector('.t-guide__counter');
    expect(tGuideCounterDom.textContent).toBe('3/3');
    const tGuideTitleDom = document.querySelectorAll('.t-guide__title');
    expect(tGuideTitleDom.length).toBe(1);
    const tGuideDescDom = document.querySelectorAll('.t-guide__desc');
    expect(tGuideDescDom.length).toBe(1);
    const tGuideActionTGuideSkipDom = document.querySelector('.t-guide__action .t-guide__skip');
    expect(tGuideActionTGuideSkipDom).toBeFalsy();
    const tGuideActionTGuidePrevDom = document.querySelectorAll('.t-guide__action .t-guide__prev');
    expect(tGuideActionTGuidePrevDom.length).toBe(1);
    const tGuideActionTGuideNextDom = document.querySelector('.t-guide__action .t-guide__next');
    expect(tGuideActionTGuideNextDom).toBeFalsy();
    const tGuideActionTGuideFinishDom = document.querySelectorAll('.t-guide__action .t-guide__finish');
    expect(tGuideActionTGuideFinishDom.length).toBe(1);
  });

  it('props.current is equal -1', async () => {
    getGuideMultipleStepsMount(Guide, { current: -1 });
    await mockDelay(100);
    const tGuideCounterDom = document.querySelector('.t-guide__counter');
    expect(tGuideCounterDom).toBeFalsy();
  });

  it(`props.finishButtonProps is equal to {theme: 'warning'}`, async () => {
    getGuideMultipleStepsMount(Guide, { current: 2, finishButtonProps: { theme: 'warning' } });
    await mockDelay(100);
    const domWrapper = document.querySelector('.t-guide__finish');
    expect(domWrapper).toHaveClass('t-button--theme-warning');
  });

  it('props.hideCounter works fine. `${domInfoText}` should exist', async () => {
    getGuideDefaultMount(Guide, { hideCounter: true });
    await mockDelay(100);
    const tGuideCounterDom = document.querySelector('.t-guide__counter');
    expect(tGuideCounterDom).toBeFalsy();
  });

  it('props.hidePrev works fine. `${domInfoText}` should exist', async () => {
    getGuideMultipleStepsMount(Guide, { current: 1, hidePrev: true });
    await mockDelay(100);
    const tGuideActionTGuidePrevDom = document.querySelector('.t-guide__action .t-guide__prev');
    expect(tGuideActionTGuidePrevDom).toBeFalsy();
  });

  it('props.hideSkip works fine. `${domInfoText}` should exist', async () => {
    getGuideMultipleStepsMount(Guide, { current: 1, hideSkip: true });
    await mockDelay(100);
    const tGuideActionTGuideSkipDom = document.querySelector('.t-guide__action .t-guide__skip');
    expect(tGuideActionTGuideSkipDom).toBeFalsy();
  });

  it(`props.highlightPadding is equal to 32`, async () => {
    getGuideDefaultMount(Guide, { highlightPadding: 32 });
    await mockDelay(100);
    const domWrapper = document.querySelector('.t-guide__highlight--mask');
    expect(domWrapper.style.width).toBe('64px');
    expect(domWrapper.style.height).toBe('64px');
    expect(domWrapper.style.top).toBe('-32px');
    expect(domWrapper.style.left).toBe('-32px');
    const domWrapper1 = document.querySelector('.t-guide__reference');
    expect(domWrapper1.style.width).toBe('64px');
    expect(domWrapper1.style.height).toBe('64px');
    expect(domWrapper1.style.top).toBe('-32px');
    expect(domWrapper1.style.left).toBe('-32px');
  });

  it(`props.nextButtonProps is equal to {theme: 'warning'}`, async () => {
    getGuideMultipleStepsMount(Guide, { current: 1, nextButtonProps: { theme: 'warning' } });
    await mockDelay(100);
    const domWrapper = document.querySelector('.t-guide__next');
    expect(domWrapper).toHaveClass('t-button--theme-warning');
  });

  it(`props.prevButtonProps is equal to {theme: 'warning'}`, async () => {
    getGuideMultipleStepsMount(Guide, { current: 2, prevButtonProps: { theme: 'warning' } });
    await mockDelay(100);
    const domWrapper = document.querySelector('.t-guide__prev');
    expect(domWrapper).toHaveClass('t-button--theme-warning');
  });

  it('props.showOverlay is equal true', async () => {
    getGuideDefaultMount(Guide, { showOverlay: true });
    await mockDelay(100);
    const tGuideHighlightMaskDom = document.querySelectorAll('.t-guide__highlight--mask');
    expect(tGuideHighlightMaskDom.length).toBe(1);
  });

  it('props.showOverlay is equal false', async () => {
    getGuideDefaultMount(Guide, { showOverlay: false });
    await mockDelay(100);
    const tGuideHighlightMaskDom = document.querySelector('.t-guide__highlight--mask');
    expect(tGuideHighlightMaskDom).toBeFalsy();
  });

  it(`props.skipButtonProps is equal to {theme: 'warning'}`, async () => {
    getGuideMultipleStepsMount(Guide, { current: 0, skipButtonProps: { theme: 'warning' } });
    await mockDelay(100);
    const domWrapper = document.querySelector('.t-guide__skip');
    expect(domWrapper).toHaveClass('t-button--theme-warning');
  });

  it('props.steps works fine.', async () => {
    getGuideDefaultMount(Guide);
    await mockDelay(100);
    const tGuideCounterDom = document.querySelector('.t-guide__counter');
    expect(tGuideCounterDom.textContent).toBe('1/1');
    const tGuideTitleDom = document.querySelectorAll('.t-guide__title');
    expect(tGuideTitleDom.length).toBe(1);
    const tGuideDescDom = document.querySelectorAll('.t-guide__desc');
    expect(tGuideDescDom.length).toBe(1);
    const tGuideActionTGuideSkipDom = document.querySelector('.t-guide__action .t-guide__skip');
    expect(tGuideActionTGuideSkipDom).toBeFalsy();
    const tGuideActionTGuidePrevDom = document.querySelector('.t-guide__action .t-guide__prev');
    expect(tGuideActionTGuidePrevDom).toBeFalsy();
    const tGuideActionTGuideNextDom = document.querySelector('.t-guide__action .t-guide__next');
    expect(tGuideActionTGuideNextDom).toBeFalsy();
    const tGuideActionTGuideFinishDom = document.querySelectorAll('.t-guide__action .t-guide__finish');
    expect(tGuideActionTGuideFinishDom.length).toBe(1);
  });

  it(`props.zIndex is equal to 5000`, async () => {
    getGuideDefaultMount(Guide, { zIndex: 5000 });
    await mockDelay(100);
    const domWrapper = document.querySelector('.t-guide__overlay');
    expect(domWrapper.style.zIndex).toBe('4998');
    const domWrapper1 = document.querySelector('.t-guide__highlight--mask');
    expect(domWrapper1.style.zIndex).toBe('4999');
  });

  it('events.change works fine', async () => {
    const onChangeFn = vi.fn();
    getGuideMultipleStepsMount(Guide, { current: 0 }, { onChange: onChangeFn });
    await mockDelay(100);
    fireEvent.click(document.querySelector('.t-guide__next'));
    expect(onChangeFn).toHaveBeenCalled(1);
    expect(onChangeFn.mock.calls[0][0]).toBe(1);
    expect(onChangeFn.mock.calls[0][1].e.type).toBe('click');
    expect(onChangeFn.mock.calls[0][1].total).toBe(3);
  });
  it('events.change works fine', async () => {
    const onChangeFn = vi.fn();
    getGuideMultipleStepsMount(Guide, { current: 1 }, { onChange: onChangeFn });
    await mockDelay(100);
    fireEvent.click(document.querySelector('.t-guide__prev'));
    expect(onChangeFn).toHaveBeenCalled(1);
    expect(onChangeFn.mock.calls[0][0]).toBe(0);
    expect(onChangeFn.mock.calls[0][1].e.type).toBe('click');
    expect(onChangeFn.mock.calls[0][1].total).toBe(3);
  });

  it('events.finish works fine', async () => {
    const onFinishFn = vi.fn();
    getGuideMultipleStepsMount(Guide, { current: 2 }, { onFinish: onFinishFn });
    await mockDelay(100);
    fireEvent.click(document.querySelector('.t-guide__finish'));
    expect(onFinishFn).toHaveBeenCalled(1);
    expect(onFinishFn.mock.calls[0][0].current).toBe(2);
    expect(onFinishFn.mock.calls[0][0].e.type).toBe('click');
    expect(onFinishFn.mock.calls[0][0].total).toBe(3);
  });

  it('events.nextStepClick works fine', async () => {
    const onNextStepClickFn = vi.fn();
    getGuideMultipleStepsMount(Guide, { current: 1 }, { onNextStepClick: onNextStepClickFn });
    await mockDelay(100);
    fireEvent.click(document.querySelector('.t-guide__next'));
    expect(onNextStepClickFn).toHaveBeenCalled(1);
    expect(onNextStepClickFn.mock.calls[0][0].current).toBe(1);
    expect(onNextStepClickFn.mock.calls[0][0].next).toBe(2);
    expect(onNextStepClickFn.mock.calls[0][0].e.type).toBe('click');
    expect(onNextStepClickFn.mock.calls[0][0].total).toBe(3);
  });

  it('events.prevStepClick works fine', async () => {
    const onPrevStepClickFn = vi.fn();
    getGuideMultipleStepsMount(Guide, { current: 1 }, { onPrevStepClick: onPrevStepClickFn });
    await mockDelay(100);
    fireEvent.click(document.querySelector('.t-guide__prev'));
    expect(onPrevStepClickFn).toHaveBeenCalled(1);
    expect(onPrevStepClickFn.mock.calls[0][0].current).toBe(1);
    expect(onPrevStepClickFn.mock.calls[0][0].prev).toBe(0);
    expect(onPrevStepClickFn.mock.calls[0][0].e.type).toBe('click');
    expect(onPrevStepClickFn.mock.calls[0][0].total).toBe(3);
  });

  it('events.skip works fine', async () => {
    const onSkipFn = vi.fn();
    getGuideMultipleStepsMount(Guide, { current: 0 }, { onSkip: onSkipFn });
    await mockDelay(100);
    fireEvent.click(document.querySelector('.t-guide__skip'));
    expect(onSkipFn).toHaveBeenCalled(1);
    expect(onSkipFn.mock.calls[0][0].current).toBe(0);
    expect(onSkipFn.mock.calls[0][0].e.type).toBe('click');
    expect(onSkipFn.mock.calls[0][0].total).toBe(3);
  });
});

describe('Guide Component', () => {
  it('GuideStep.body works fine', async () => {
    getCustomGuideStepMount(Guide, { body: <span className="custom-node">TNode</span> });
    await mockDelay(100);
    const customNodeDom = document.querySelector('.custom-node');
    expect(customNodeDom).toBeTruthy();
    expect(document.body).toMatchSnapshot();
  });

  it('GuideStep.children works fine', async () => {
    getCustomGuideStepMount(Guide, { children: <span className="custom-node">TNode</span> });
    await mockDelay(100);
    const customNodeDom = document.querySelector('.custom-node');
    expect(customNodeDom).toBeTruthy();
    expect(document.body).toMatchSnapshot();
  });

  it('GuideStep.content works fine', async () => {
    getCustomGuideStepMount(Guide, { content: <span className="custom-node">TNode</span> });
    await mockDelay(100);
    const customNodeDom = document.querySelector('.custom-node');
    expect(customNodeDom).toBeTruthy();
    expect(document.body).toMatchSnapshot();
  });

  it('GuideStep.highlightContent works fine', async () => {
    getCustomGuideStepMount(Guide, { highlightContent: <span className="custom-node">TNode</span> });
    await mockDelay(100);
    const customNodeDom = document.querySelector('.custom-node');
    expect(customNodeDom).toBeTruthy();
    expect(document.body).toMatchSnapshot();
  });

  it(`GuideStep.highlightPadding is equal to 32`, async () => {
    getCustomGuideStepMount(Guide, { highlightPadding: 32 });
    await mockDelay(100);
    const domWrapper = document.querySelector('.t-guide__highlight--mask');
    expect(domWrapper.style.width).toBe('64px');
    expect(domWrapper.style.height).toBe('64px');
    expect(domWrapper.style.top).toBe('-32px');
    expect(domWrapper.style.left).toBe('-32px');
    const domWrapper1 = document.querySelector('.t-guide__reference');
    expect(domWrapper1.style.width).toBe('64px');
    expect(domWrapper1.style.height).toBe('64px');
    expect(domWrapper1.style.top).toBe('-32px');
    expect(domWrapper1.style.left).toBe('-32px');
  });

  const modeExpectedDom = ['.t-popup', '.t-guide__dialog'];
  ['popup', 'dialog'].forEach((item, index) => {
    it(`GuideStep.mode is equal to ${item}`, async () => {
      const { container } = getCustomGuideStepMount(Guide, { mode: item });
      await mockDelay(100);
      const modeExpectedDomIndexDom = document.querySelector(modeExpectedDom[index]);
      expect(modeExpectedDomIndexDom).toBeTruthy();
      expect(container).toMatchSnapshot();
    });
  });

  it(`GuideStep.nextButtonProps is equal to {theme: 'warning'}`, async () => {
    getCustomMultipleGuideStepMount(Guide, { current: 1, nextButtonProps: { theme: 'warning' } });
    await mockDelay(100);
    const domWrapper = document.querySelector('.t-guide__next');
    expect(domWrapper).toHaveClass('t-button--theme-warning');
  });

  it(`GuideStep.placement is equal to bottom-left`, async () => {
    getCustomGuideStepMount(Guide, { placement: 'bottom-left' });
    await mockDelay(100);
    const domWrapper = document.querySelector('.t-popup');
    expect(domWrapper.getAttribute('data-popper-placement')).toBe('bottom-start');
    expect(document.body).toMatchSnapshot();
  });

  it(`GuideStep.popupProps is equal to {placement: 'top-left'}`, async () => {
    getCustomGuideStepMount(Guide, { popupProps: { placement: 'top-left' } });
    await mockDelay(100);
    const domWrapper = document.querySelector('.t-popup');
    expect(domWrapper.getAttribute('data-popper-placement')).toBe('top-start');
  });

  it(`GuideStep.prevButtonProps is equal to {theme: 'warning'}`, async () => {
    getCustomMultipleGuideStepMount(Guide, { current: 2, prevButtonProps: { theme: 'warning' } });
    await mockDelay(100);
    const domWrapper = document.querySelector('.t-guide__prev');
    expect(domWrapper).toHaveClass('t-button--theme-warning');
  });

  it('GuideStep.showOverlay is equal true', async () => {
    getCustomMultipleGuideStepMount(Guide, { showOverlay: true });
    await mockDelay(100);
    const tGuideHighlightMaskDom = document.querySelectorAll('.t-guide__highlight--mask');
    expect(tGuideHighlightMaskDom.length).toBe(1);
  });

  it('GuideStep.showOverlay is equal false', async () => {
    getCustomMultipleGuideStepMount(Guide, { showOverlay: false });
    await mockDelay(100);
    const tGuideHighlightMaskDom = document.querySelector('.t-guide__highlight--mask');
    expect(tGuideHighlightMaskDom).toBeFalsy();
  });

  it(`GuideStep.skipButtonProps is equal to {theme: 'warning'}`, async () => {
    getCustomMultipleGuideStepMount(Guide, { current: 1, skipButtonProps: { theme: 'warning' } });
    await mockDelay(100);
    const domWrapper = document.querySelector('.t-guide__skip');
    expect(domWrapper).toHaveClass('t-button--theme-warning');
  });

  it(`GuideStep.stepOverlayClass is equal to t-test-guide-step-overlay`, async () => {
    getCustomGuideStepMount(Guide, { stepOverlayClass: 't-test-guide-step-overlay' });
    await mockDelay(100);
    const domWrapper = document.querySelector('.t-popup');
    expect(domWrapper).toHaveClass('t-test-guide-step-overlay');
    expect(document.body).toMatchSnapshot();
  });

  it('GuideStep.title works fine', async () => {
    getCustomGuideStepMount(Guide, { title: <span className="custom-node">TNode</span> });
    await mockDelay(100);
    const customNodeDom = document.querySelector('.custom-node');
    expect(customNodeDom).toBeTruthy();
    expect(document.body).toMatchSnapshot();
  });
});
